fix(layout): move z-index to sidebar-resize-handle from sidebar-resize-line

--- a/src/layout/styles/layout.scss
+++ b/src/layout/styles/layout.scss
@@ -152,12 +152,12 @@
         transition: none;
         right: -2px;
         width: 2px;
+        z-index: variables.$z-index-6;
 
         .sidebar-resize-line {
             height: 100%;
             transition: all 180ms linear;
             border-right: 2px solid transparent;
-            z-index: variables.$z-index-7;
         }
         &:hover {
             .sidebar-resize-line {
